--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 <body>
     
     <div class="container">
-
+        
+        <!-- Calculator Screen -->
         <div class="screen-container">
             <input type="text" id="screen">
         </div>
 
+        <!-- Calculator Buttons -->
         <div class="buttons-container">
                 <button id="btn" onclick="inputValue('7')">7</button>
 
@@ -50,6 +52,7 @@
                 <button id="btn" onclick="calculate()">=</button>
         </div>
 
+        <!-- Calculator Clear Button -->
         <div class="clear-btn">
             <button onclick="clearValue()">CLEAR</button>
         </div>
@@ -60,4 +63,5 @@
 
     <script src="index.js"></script>
 </body>
+
 </html>
